tests/purs/failing/NestedRecordTypeError.out
Error 1 of 2:

  in module [33mA[0m
  at tests/purs/failing/NestedRecordTypeError.purs:7:3 - 7:34 (line 7, column 3 - line 7, column 34)

    Could not match type
    [33m                   [0m
    [33m  ( c :: { d :: Int[0m
    [33m         }         [0m
    [33m  ...              [0m
    [33m  )                [0m
    [33m                   [0m
    with type
    [33m                  [0m
    [33m  ( b :: { z :: t0[0m
    [33m         | t1     [0m
    [33m         }        [0m
    [33m  ...             [0m
    [33m  | t2            [0m
    [33m  )               [0m
    [33m                  [0m

  while trying to match type [33m{ c :: { d :: Int[0m
                             [33m       }         [0m
                             [33m}                [0m
    with type [33m{ b :: { z :: t0[0m
              [33m       | t1     [0m
              [33m       }        [0m
              [33m| t2            [0m
              [33m}               [0m
  while matching label [33ma[0m
  while checking that expression [33mcase $0 of                                           [0m
                                 [33m  { a: { b: { z: z } }, d: d, e: e, f: f, g: g } -> z[0m
    has type [33mInt[0m
  in value declaration [33mf[0m

  where [33mt2[0m is an unknown type
        [33mt1[0m is an unknown type
        [33mt0[0m is an unknown type

  See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
  or to contribute content related to this error.

Error 2 of 2:

  in module [33mA[0m
  at tests/purs/failing/NestedRecordTypeError.purs:7:3 - 7:34 (line 7, column 3 - line 7, column 34)

    Could not match type
    [33m    [0m
    [33m  ()[0m
    [33m    [0m
    with type
    [33m           [0m
    [33m  ( g :: t1[0m
    [33m  | t2     [0m
    [33m  )        [0m
    [33m           [0m

  while trying to match type [33m{ a :: { c :: { d :: Int[0m
                             [33m              }         [0m
                             [33m       }                [0m
                             [33m, d :: Int              [0m
                             [33m, e :: Int              [0m
                             [33m, f :: Int              [0m
                             [33m}                       [0m
    with type [33mRecord t0[0m
  while checking that expression [33mcase $0 of                                           [0m
                                 [33m  { a: { b: { z: z } }, d: d, e: e, f: f, g: g } -> z[0m
    has type [33mInt[0m
  in value declaration [33mf[0m

  where [33mt0[0m is an unknown type
        [33mt2[0m is an unknown type
        [33mt1[0m is an unknown type

  See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
  or to contribute content related to this error.

